--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vueuse/core": "^11.0.3",
     "core-js": "^3.8.3",
+    "sortablejs": "^1.15.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@types/sortablejs": "^1.15.8",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.44",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "~4.5.5"
   }
 }
